# boltzmannMPIDS

./: .gitignore  Dataset von Bars 4x4 Bars.txt  README.md  pyproject.toml
example_package/: __init__.py  connections_model.py  datasets.py  metrics.py  model.py  training.py
notebooks/: boltzmann85_new.ipynb  connections.ipynb  dataset.ipynb  development.ipynb  development_binary.ipynb  notes.ipynb  plot_weights.ipynb  stats.ipynb  storage.ipynb  symmetry_statistics.ipynb  test_adj.ipynb  test_hello_world.ipynb  weight_matrix_plot.ipynb
